# Atari800MacX

./: .gitignore  CLAUDE.md  README.md  RELEASE_NOTES_7.0.0_BETA1.md  a800release.txt  add_files_to_xcode.py  build_release.sh  build_simple.sh  clean_and_build.sh  create_dmg.sh  debug_netsio.py  notarize.sh  test_build.sh  test_compile_new_files.sh
atari800-MacOSX/: .gitignore  README.1ST
atari800-MacOSX/DOC/: INSTALL.falcon
atari800-MacOSX/scale2x-1.6/contrib/: readme.txt
atari800-MacOSX/scale2x-1.6/contrib/java/: Scale2xImageFilter.java
atari800-MacOSX/scale2x-1.6/contrib/sdl/: scale2x.c
atari800-MacOSX/scale2x-1.6/contrib/visualc/: scale2x.cpp
atari800-MacOSX/src/: af80.c  af80.h  afile.c  akey.h  antic.c  antic.c.mods  atari copy.c  atari.c  atari.h  bit3.c  bit3.h  capslock.c  capslock.h  cartridge.c  cartridge.h  cartridge_info.h  cassette.c  cassette.h  cfg.c  cfg.h  config.h.in  configure  cpu.c  cpu.h  cvector.h  devices.c  devices.h  eeprom.c  eeprom.h  emuio.c  emuio.h  esc.c  esc.h  flash.c  flash.h  gtia.c  ide.c  ide.h  ide_internal.h  img_disk.c  (+69 more)
atari800-MacOSX/src/Atari800MacX/: AboutBox.h  AboutBox.m  AboutBoxTextView.h  AboutBoxTextView.m  AnticDataSource.h  AnticDataSource.m  Atari1020Simulator.h  Atari1020Simulator.m  Atari1025Simulator.m  Atari410off.tiff  Atari410on.tiff  Atari800DriveTextField.h  Atari800DriveTextField.m  Atari800FunctionKeysWindow.h  Atari800FunctionKeysWindow.m  Atari800GampepadWindow.m  Atari800ImageView.h  Atari800ImageView.m  Atari800MacX.xcconfig  Atari800MediaWindow.h  Atari800MediaWindow.m  Atari800TableView.h  Atari800TableView.m  Atari800Window.h  Atari800Window.m  Atari800WindowController.h  Atari800WindowController.m  Atari825Simulator.h  Atari825Simulator.m  AtasciiPrinter.h  AtasciiPrinter.m  Atr.h  Breakpoint.h  Breakpoint.m  BreakpointCondition.h  BreakpointCondition.m  BreakpointDataSource.h  BreakpointDataSource.m  BreakpointEditorDataSource.h  BreakpointEditorDataSource.m  (+161 more)
atari800-MacOSX/src/Atari800MacX/AboutBox.nib/: classes.nib  designable.nib  info.nib  keyedobjects.nib
atari800-MacOSX/src/Atari800MacX/Atari800MacX Help/: Atari800MacX Help idx  BootMediaTab.html  Compatibility.html  ConfigurationFiles.html  ControlMenu.html  ControllersTab.html  CopyPaste.html  Credits.html  DebugMonitor.html  DisplayMenu.html  DisplayTab.html  DriveManagement.html  ExpansionsTab.html  Features.html  FileTypes.html  FullScreenUI.html  GamepadsTab.html  GnuLicense.html  (+18 more)
atari800-MacOSX/src/Atari800MacX/GUIlib-1.1.1/: CHANGES  GUI.cpp  GUI.h  GUI_C.cpp  GUI_C.h  GUI_area.cpp  GUI_button.cpp  GUI_button.h  GUI_font.cpp  GUI_font.h  GUI_generic.cpp  GUI_generic.h  GUI_image.cpp  GUI_image.h  GUI_loadimage.cpp  GUI_menu.cpp  GUI_menu.h  GUI_output.cpp  GUI_output.h  GUI_scroll.h  GUI_scrollbar.cpp  GUI_scrollbar.h  GUI_termwin.cpp  GUI_termwin.h  GUI_widget.cpp  GUI_widget.h  MPWmake.sea.hqx  Makefile.am  Makefile.in  README  aclocal.m4  arrows.h  cancel_img.h  confdefs.h  config.cache  configure  configure.in  genimage.c  hello.cpp  hello_C.c  (+4 more)
backup_original_core/: atari.c  gtia.c  sio.c
(+106 files in other folders)
